objects/DocumentInstruction__c.object
<CustomObject>
    <description>Instructions on how to prepare or handle a document.</description>
    <fields>
        <fullName>Audience__c</fullName>
        <description>The audience for whom the instructions are meant.</description>
        <inlineHelpText>The audience for whom the instructions are meant.</inlineHelpText>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DocumentInstructionEID__c</fullName>
        <description>The Enterprise ID for this document instruction record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this document instruction record.</inlineHelpText>
        <label>Document Instruction EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentRequirement__c</fullName>
        <description>The document requirement that the instructions are for.</description>
        <inlineHelpText>The document requirement that the instructions are for.</inlineHelpText>
        <label>Document Requirement</label>
        <referenceTo>DocumentRequirement__c</referenceTo>
        <relationshipLabel>Document Instructions</relationshipLabel>
        <relationshipName>DocumentInstructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InstructionSummaryText__c</fullName>
        <description>A quick summary of the document instructions, for use in reports.</description>
        <inlineHelpText>A quick summary of the document instructions, for use in reports.</inlineHelpText>
        <label>Instruction Summary</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstructionText__c</fullName>
        <description>The text of the instructions regarding this document in this language for this audience.</description>
        <inlineHelpText>The text of the instructions regarding this document in this language for this audience.</inlineHelpText>
        <label>Instruction Text</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language that the instructions are in.</description>
        <inlineHelpText>The language that the instructions are in.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryFormula__c</fullName>
        <description>The program category that this document instruction falls under.</description>
        <formula>DocumentRequirement__r.ProgramCategory__r.Name</formula>
        <inlineHelpText>The program category that this document instruction falls under.</inlineHelpText>
        <label>Program Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramFormula__c</fullName>
        <description>The program associated with this document instruction.</description>
        <formula>if (  ISBLANK( DocumentRequirement__r.Program__r.Name ),  DocumentRequirement__r.ProgramCategory__r.Program__r.Name , DocumentRequirement__r.Program__r.Name)</formula>
        <inlineHelpText>The program associated with this document instruction.</inlineHelpText>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <label>Document Instruction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentRequirement__c</columns>
        <columns>InstructionSummaryText__c</columns>
        <columns>Audience__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Document Instruction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>